--- a/package.json
+++ b/package.json
@@ -9,14 +9,22 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.0.0-beta.0",
     "axios": "^0.27.2",
-    "element-plus": "^1.0.2-beta.28",
+    "element-plus": "^2.2.2",
     "js-md5": "^0.7.3",
+    "node-sass": "^7.0.1",
+    "sass": "^1.52.1",
+    "sass-loader": "^13.0.0",
+    "style-loader": "^3.3.1",
+    "unplugin-element-plus": "^0.4.0",
     "vue": "^3.2.25",
     "vue-router": "^4.0.13"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
+    "unplugin-auto-import": "^0.8.5",
+    "unplugin-vue-components": "^0.19.5",
     "vite": "^2.9.9",
     "vite-plugin-babel-import": "^2.0.5"
   }
