--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "style-loader": "^3.3.1",
     "unplugin-element-plus": "^0.4.0",
     "vue": "^3.2.25",
-    "vue-router": "^4.0.13"
+    "vue-router": "^4.0.13",
+    "wangeditor": "^4.7.15"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
