--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "element-plus": "^2.2.2",
     "js-md5": "^0.7.3",
     "node-sass": "^7.0.1",
+    "pushstate-server": "^3.1.0",
     "sass": "^1.52.1",
     "sass-loader": "^13.0.0",
     "style-loader": "^3.3.1",
